operations/istio/weighted-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: attendees-api-vs
spec:
  hosts:
    - attendees-http
  http:
  - route:
    - destination:
        host: attendees-http
        subset: v1
      weight: 90
    - destination:
        host: attendees-http
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: attendees-grpc-vs
spec:
  hosts:
    - attendees-grpc
  http:
  - route:
    - destination:
        host: attendees-grpc
        subset: v1
      weight: 50
    - destination:
        host: attendees-grpc
        subset: v2
      weight: 50
